djang/static/website/styles/victory.css
#victory
{
    position: absolute;
    display: none;
    width: 100%;
    height: 100vh;
    background-color: #000000c0;
    justify-content: center;
    align-items: center;
    z-index: 1;
    opacity: 0;
    transition: opacity 0.5s ease;
}

#victory.appearing, #choosePaddlePanel.appearing
{
    opacity: 1;
}

#victoryPanel
{
    position: relative;
    display: flex;
    flex-direction: column; 
    justify-content:space-evenly;
    align-items: center;
    width: 50vw;
    max-width: 40rem;
    height: calc(20vh + 20vw);
    max-height: 35rem;
    font-size: clamp(0.5rem + 1vw, 0.5rem + 2vw, 6vw);
    transition: all 1s ease;
}

#victoryPanel h2
{
    position: absolute;
}

#victoryImg
{
    position: absolute;
    width: calc(15vw + 10vh);
    height: calc(15vw + 10vh);
    top: 0;
}

#closeVictoryButton
{
    position: absolute;
    bottom: 1rem;
    width: 20vw;
    max-width: 12rem;
    height: 7vh;
    font-size: clamp(0.5rem + 1vw, 0.5rem + 2vw, 6vw);
    border: none;
    border: 1px solid #999999;
    background-color:rgb(0, 0, 0);
    border-radius: 8px;
    box-shadow: 0 0 8px rgba(0, 255, 255, 0.301);
}

#closeVictoryButton:hover
{
    border-color: #035500;
    background-color: rgba(0, 255, 21, 0.219);
    opacity: 0.8;
    box-shadow: 0 0 16px rgba(0, 255, 255, 0.301);
}

.grow-on-appear
{
    animation: grow 0.2s ease-out forwards;
}

.grow-on-appear-fast
{
    animation: grow 0.1s ease-out forwards;
}

